--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -262,6 +262,60 @@ ul.date-picker__week--list {
   color: #aaa;
 }
 
+/* LOGIN */
+
+.login{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  width: 100%;
+  
+  background: url('../public/assets/images/background/background6.jpg')no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.login .form-box{
+  position: relative;
+  width: 400px;
+  height: 450px;
+  background: transparent;
+  border: 2px solid rgba(255,255,255,0.5);
+  border-radius: 20px;
+  backdrop-filter: blur(15px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.login .form-box h2{
+  font-size: 2em;
+  color: #fff;
+  text-align: center;
+}
+
+.login .form-box  .inputbox{
+  position: relative;
+  margin: 30px 0;
+  width: 310px;
+  border-bottom: 2px solid #fff;
+}
+
+.login .form-box .inputbox label{
+  position: absolute;
+  top: 50%;
+  left: 5px;
+  transform: translateY(-50%);
+  color: #fff;
+  font-size: 1em;
+  pointer-events: none;
+  transition: .5s;
+}
+
+.login 
+
+
 @keyframes appear {
   from {
     opacity: 0;
